Revise README for clarity and detail
Updated README to enhance project description, features, and structure.